# gnit

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.agents/skills/nit-release/: SKILL.md
.claude/skills/gnit-release/: SKILL.md
.github/actions/gnit-ci-check/: action.yml
.github/workflows/: ci.yml  deploy-site.yml  release.yml
.grok/skills/gnit-release/: SKILL.md
docs/decisions/: 0001-name-and-scope.md  0002-change-and-pin.md  0003-human-facing-verbs.md  0004-hooks-and-raw-git.md  0005-site-deployment.md  0006-rust-cli-and-updates.md  0007-legible-and-self-healing-workspace.md  0008-cached-update-notice.md  0009-branch-aware-checkout.md  0010-strict-push-resume.md  0011-skill-distribution.md  0012-pr-flow.md  0013-agent-guidance.md  0014-rename-to-gnit.md  README.md
docs/planning/: README.md  gnit-design.md  implementation-roadmap.md  nit-design.md  workflow-invariants.md
docs/planning/archive/: legit-v1-plan.md
site/: .gitignore  index.md  package-lock.json  package.json
site/.vitepress/: config.mts
site/guide/: agents.md  cli.md  concepts.md  design.md  implementation.md  quickstart.md
skills/gnit/: SKILL.md
skills/nit/: SKILL.md
skills/nit-release/: SKILL.md
src/: cache.rs  change.rs  checkout.rs  ci.rs  cli.rs  clone.rs  git.rs  ids.rs  lock.rs  log.rs  main.rs  metadata.rs  migrate.rs  pin.rs  pr.rs  push.rs  review.rs  skills.rs  status.rs  trailers.rs  update.rs  upkeep.rs  workspace.rs
tests/: cli.rs
