[package]
name = "nit"
version = "0.7.0"
edition = "2021"
description = "Git-native multi-repo workspaces"
license = "MIT"
repository = "https://github.com/mostlydev/nit"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sigpipe = "0.1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
